--- a/playbooks/scripts/roles/default/vars/main.yml
+++ b/playbooks/scripts/roles/default/vars/main.yml
@@ -1,3 +1,8 @@
-#SPDX-License-Identifier: MIT-0
 ---
 # vars file for playbooks/scripts/roles/default
+docker_apt_key_url: https://download.docker.com/linux/ubuntu/gpg
+docker_apt_key_path: /usr/share/keyrings/docker-archive-keyring.gpg
+docker_repo_arch: "{{ (ansible_architecture == 'x86_64') | ternary('amd64', ansible_architecture) }}"
+docker_repo_codename: "{{ ansible_lsb.codename }}"
+docker_repo: "deb [arch={{ docker_repo_arch }} signed-by={{ docker_apt_key_path }}] https://download.docker.com/linux/ubuntu {{ docker_repo_codename }} stable"
+run_as_root: True
