--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -1,3 +1,3 @@
-- name: Import provision playbooks
-  tasks:
-    - import_playbook: provision/docker.yml
+- import_playbook: provision/dependencies.yml
+
+- import_playbook: provision/docker.yml
