feat: added hi-tech project with api and ui

--- a/playbooks/deploy/roles/traefik/vars/main.yml
+++ b/playbooks/deploy/roles/traefik/vars/main.yml
@@ -3,3 +3,4 @@
 # vars file for playbooks/scripts/roles/traefik
 certs_dir: "/home/{{ remote_user }}/.infra/stacks/{{ docker_stack_name }}/certs/{{ app_domain }}"
 plugins_dir: "/home/{{ remote_user }}/.infra/stacks/{{ docker_stack_name }}/plugins/{{ app_domain }}"
+traefik_domain: "traefik-narxoz.duckdns.org"
