fix: added docker config path to shepherd

--- a/playbooks/deploy/roles/shepherd/vars/main.yml.example
+++ b/playbooks/deploy/roles/shepherd/vars/main.yml.example
@@ -1,2 +1,3 @@
 # refer to https://github.com/caronc/apprise/wiki/Notify_email
 email_notification_url: user:pass@gmail.com
+docker_registry_config_path: /home/{{ remote_user }}/.docker/config.json
