chore: removed tracking deploy/vars file

--- a/playbooks/deploy/vars/vars.yml.example
+++ b/playbooks/deploy/vars/vars.yml.example
@@ -2,3 +2,4 @@ app_domain: bl1nkker.infra.com
 infra_ipwhitelist: ""
 docker_registry: "{{ docker_ce_local.registry + '/' if docker_ce_local is defined else '' }}"
 services_domain: services.domain.org
+service_header: X-INFRA-SERVICE
